[package]
name = "abletime"
version = "0.1.0"
authors = ["Adam <adamweiner@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/adamweiner/abletime/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
clap = "3.0.0-beta.1"
