[package]
name = "abletime"
version = "0.1.0"
authors = ["Adam Weiner"]
description = "A utility for calculating time spent on projects."
edition = "2018"
readme = "README.md"
repository = "https://github.com/adamweiner/abletime"
license = "MIT"
keywords = ["ableton", "project", "files", "time"]
categories = ["command-line-utilities"]
exclude = ["/target/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.0"
clap = "3.0.0-beta.1"
