[package]
name = "abletime"
version = "0.1.1"
authors = ["Adam Weiner"]
description = "A utility for calculating time spent on projects."
edition = "2018"
readme = "README.md"
repository = "https://github.com/adamweiner/abletime"
license = "MIT"
keywords = ["ableton", "project", "files", "time"]
categories = ["command-line-utilities"]
exclude = ["/target/"]

[dependencies]
chrono = "^0.4.0"
clap = "3.0.0-beta.1"
regex = "^1.5.5"
semver = "^0.10.0"
